Fix scrollbar thickness (fixes #5)

--- a/src/scrollbar.less
+++ b/src/scrollbar.less
@@ -2,6 +2,7 @@
     background: var(--breeze-scrollbar-normal-track-background) !important;
     border: 1px solid var(--breeze-scrollbar-normal-track-border) !important;
     border-radius: var(--breeze-scrollbar-border-radius) !important;
+    width: 8px !important;
 
     &:hover {
         background-color: var(--breeze-scrollbar-hover-track-background) !important;
